--- a/CSC547 Final Project/Final Project.ipynb
+++ b/CSC547 Final Project/Final Project.ipynb
@@ -651,12 +651,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29ec330b",
+   "cell_type": "markdown",
+   "id": "96bd8626",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "I will put stuff here later, maybe."
+   ]
   }
  ],
  "metadata": {
@@ -675,7 +675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
