--- a/CSC547 class/IMDB model.ipynb
+++ b/CSC547 class/IMDB model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 13,
    "id": "61db1578",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,11 @@
     "import keras\n",
     "import pandas as pd\n",
     "import tensorflow as tf\n",
+    "import nltk\n",
     "from keras.layers import Dense\n",
     "from keras.models import Sequential\n",
     "from keras.layers import TextVectorization\n",
     "from keras.utils import pad_sequences\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk.tokenize import word_tokenize\n",
-    "from nltk.stem import WordNetLemmatizer\n",
     "import os\n",
     "from nltk.tokenize import word_tokenize\n",
     "import matplotlib.pyplot as plt"
@@ -33,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 3,
    "id": "e1b2c2d0",
    "metadata": {},
    "outputs": [],
@@ -43,7 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 31,
+   "id": "caaa8adc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label = ['0','1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "8275c864",
    "metadata": {},
    "outputs": [],
@@ -61,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 5,
    "id": "c45cb22b",
    "metadata": {},
    "outputs": [
@@ -136,7 +144,7 @@
        "4  This is not the typical Mel Brooks film. It wa...      1"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,29 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
-   "id": "e0d353fd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 244,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# No null values in dataset.\n",
-    "df['review'].isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 7,
    "id": "1c1300c5",
    "metadata": {},
    "outputs": [
@@ -206,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 8,
    "id": "d3bfaf16",
    "metadata": {},
    "outputs": [],
@@ -219,19 +205,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 9,
    "id": "4ff3eff8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stop_words = stopwords.words('english') # defining stop_words\n",
-    "stop_words.remove('not') # removing not from the stop_words list as it contains value in negative movies\n",
+    "# defining stop_words\n",
+    "stop_words = stopwords.words('english') \n",
+    "\n",
+    "# removing not from the stop_words list as it contains value in negative movies\n",
+    "stop_words.remove('not') \n",
+    "\n",
     "lemmatizer = WordNetLemmatizer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 10,
    "id": "b5fafbb9",
    "metadata": {},
    "outputs": [],
@@ -262,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 14,
    "id": "066d0948",
    "metadata": {},
    "outputs": [
@@ -343,7 +333,7 @@
        "4  not typical mel brook film much le slapstick m...  "
       ]
      },
-     "execution_count": 249,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 15,
    "id": "48fd6896",
    "metadata": {},
    "outputs": [
@@ -407,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 16,
    "id": "e151c901",
    "metadata": {},
    "outputs": [
@@ -415,8 +405,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train_review_bow shape:  (35000, 19577)\n",
-      "X_test_review_bow shape:  (15000, 19577)\n"
+      "X_train_review_bow shape:  (35000, 19507)\n",
+      "X_test_review_bow shape:  (15000, 19507)\n"
      ]
     }
    ],
@@ -442,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 17,
    "id": "225c778e",
    "metadata": {},
    "outputs": [
@@ -450,8 +440,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train_review_tfidf shape:  (35000, 19577)\n",
-      "X_test_review_tfidf shape:  (15000, 19577)\n"
+      "X_train_review_tfidf shape:  (35000, 19507)\n",
+      "X_test_review_tfidf shape:  (15000, 19507)\n"
      ]
     }
    ],
@@ -476,147 +466,76 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "66b58b02",
-   "metadata": {},
-   "source": [
-    "#### Naive Bayes: BOW"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 253,
-   "id": "82944858",
+   "execution_count": 30,
+   "id": "4cd9dc37",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy:  0.852\n"
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (2798844281.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\alan\\AppData\\Local\\Temp\\ipykernel_34388\\2798844281.py\"\u001b[1;36m, line \u001b[1;32m6\u001b[0m\n\u001b[1;33m    model.add(layers.Dense(25, activation = \"relu\")\u001b[0m\n\u001b[1;37m                                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "# Build model\n",
+    "model = Sequential()\n",
     "\n",
-    "clf = MultinomialNB()\n",
-    "clf.fit(X_train_review_bow, y_train)\n",
-    "\n",
-    "y_pred = clf.predict(X_test_review_bow) #prediction from model\n",
-    "print('Test Accuracy: ', accuracy_score(y_test, y_pred)) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "79d64a69",
-   "metadata": {},
-   "source": [
-    "#### Naive Bayes: TFIDF"
+    "# Input - Layer\n",
+    "model.add(layers.Dense(50, activation = \"relu\", input_shape=(10000, )))\n",
+    "model.add(layers.Dense(25, activation = \"relu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
-   "id": "15a4fe1f",
+   "execution_count": 26,
+   "id": "65dee1cd",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy:  0.8602666666666666\n"
+     "ename": "TypeError",
+     "evalue": "fit() got multiple values for argument 'batch_size'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_34388\\2423914998.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# Train model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train_review_bow\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mX_test_review_bow\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m32\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mG:\\anaconda3\\lib\\site-packages\\keras\\utils\\traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     68\u001b[0m             \u001b[1;31m# To get the full stack trace, call:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     69\u001b[0m             \u001b[1;31m# `tf.debugging.disable_traceback_filtering()`\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 70\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     71\u001b[0m         \u001b[1;32mfinally\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     72\u001b[0m             \u001b[1;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mG:\\anaconda3\\lib\\site-packages\\keras\\utils\\traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     63\u001b[0m         \u001b[0mfiltered_tb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     66\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m             \u001b[0mfiltered_tb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_process_traceback_frames\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__traceback__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: fit() got multiple values for argument 'batch_size'"
      ]
     }
    ],
    "source": [
-    "clf = MultinomialNB(alpha=1)\n",
-    "clf.fit(X_train_review_tfidf, y_train)\n",
     "\n",
-    "y_pred = clf.predict(X_test_review_tfidf)\n",
-    "print('Test Accuracy: ', accuracy_score(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "22a8437d",
-   "metadata": {},
-   "source": [
-    "#### Logistic Regression: TFIDF"
+    "model.add(layers.Dropout(0.2, noise_shape=None, seed=None))\n",
+    "model.add(layers.Dense(50, activation = \"relu\"))\n",
+    "# Output- Layer\n",
+    "model.add(layers.Dense(1, activation = \"sigmoid\"))model.summary()\n",
+    "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
-   "id": "0b050af1",
+   "execution_count": 29,
+   "id": "1abe10cf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 256,
-   "id": "33f8e182",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy:  0.8897333333333334\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
-    "clf = LogisticRegression(penalty='l2')\n",
-    "clf.fit(X_train_review_tfidf, y_train)\n",
-    "\n",
-    "y_pred = clf.predict(X_test_review_tfidf)\n",
-    "print('Test Accuracy: ', accuracy_score(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 257,
-   "id": "8fcd7970",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+------------+---------------------+----------+\n",
-      "| Vectorizer |        Model        | Accuracy |\n",
-      "+------------+---------------------+----------+\n",
-      "|    BOW     |     Naive Bayes     |  84.6%   |\n",
-      "|   TFIDF    |     Naive Bayes     |  85.3%   |\n",
-      "|   TFIDF    | Logistic Regression |  88.0%   |\n",
-      "+------------+---------------------+----------+\n"
-     ]
-    }
-   ],
-   "source": [
-    "from prettytable import PrettyTable\n",
-    "\n",
-    "x = PrettyTable()\n",
-    "\n",
-    "x.field_names = ['Vectorizer', 'Model', 'Accuracy']\n",
-    "x.add_row(['BOW', 'Naive Bayes', '84.6%'])\n",
-    "x.add_row(['TFIDF', 'Naive Bayes', '85.3%'])\n",
-    "x.add_row(['TFIDF', 'Logistic Regression', '88.0%'])\n",
-    "print(x)"
+    "model.compile(\n",
+    " optimizer = \"adam\",\n",
+    " loss = \"binary_crossentropy\",\n",
+    " metrics = [\"accuracy\"]\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65dee1cd",
+   "id": "d9642872",
    "metadata": {},
    "outputs": [],
    "source": []
