--- a/CSC547 Final Project/Final Project.ipynb
+++ b/CSC547 Final Project/Final Project.ipynb
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9350d2ff",
+   "id": "18130c7f",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b5c7ba2",
+   "id": "ab8d0ae2",
    "metadata": {},
    "source": [
     "## Interpertations\n",
@@ -695,12 +695,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72d771af",
+   "cell_type": "markdown",
+   "id": "1dc2f001",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "References\n",
+    "\n",
+    "https://pyimagesearch.com/2018/12/31/keras-conv2d-and-convolutional-layers/"
+   ]
   }
  ],
  "metadata": {
