--- a/CSC547 Final Project/Final Project.ipynb
+++ b/CSC547 Final Project/Final Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2f69811f",
+   "id": "7f765c63",
    "metadata": {},
    "source": [
     "## Brain Tumor Prediction with Convolutional Neural Network (CNN)"
@@ -56,12 +56,7 @@
     "\n",
     "- Summary of the project and its objectives\n",
     "- Key takeaways from the project\n",
-    "- Future directions for research in this area\n",
-    "\n",
-    "7. References:\n",
-    "\n",
-    "- List of sources cited in the presentation\n",
-    "- Acknowledgment of any collaborators or contributors to the project"
+    "- Future directions for research in this area\n"
    ]
   },
   {
@@ -89,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "fe0e691b",
+   "id": "22da4687",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,8 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "45f6dd09",
+   "execution_count": 111,
+   "id": "7fa16dc2",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +104,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 111,
      "metadata": {
       "image/jpeg": {
        "width": 800
@@ -119,7 +114,7 @@
     }
    ],
    "source": [
-    "Image(filename= path +'Dataset-Details-Project.jpg',width=800)"
+    "Image(filename='Dataset-Details-Project.jpg',width=800)"
    ]
   },
   {
@@ -177,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 110,
    "id": "ed4b3bf0",
    "metadata": {},
    "outputs": [
@@ -188,7 +183,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 110,
      "metadata": {
       "image/jpeg": {
        "width": 800
@@ -198,7 +193,7 @@
     }
    ],
    "source": [
-    "Image(filename= path +'Dataset_Details-Project.jpg',width=800)"
+    "Image(filename='Dataset_Details-Project.jpg',width=800)"
    ]
   },
   {
@@ -265,9 +260,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5151a6f0",
+   "metadata": {},
+   "source": [
+    "#### Architecture of the CNN model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "8e0634a2",
+   "execution_count": 127,
+   "id": "53dd5e1f",
    "metadata": {},
    "outputs": [
     {
@@ -277,13 +280,17 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 82,
-     "metadata": {},
+     "execution_count": 127,
+     "metadata": {
+      "image/png": {
+       "width": 1000
+      }
+     },
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image(filename= path +'CNN1.png')"
+    "Image(filename='CNN1.png',width = 1000)"
    ]
   },
   {
@@ -291,12 +298,7 @@
    "id": "a23b6007",
    "metadata": {},
    "source": [
-    "#### Adding Convolutional Layers \n",
-    "Convolutional layers are used in deep learning models to extract features from input data. \n",
-    "- 16 is the number of filters (or channels) in the layer. 3x3 is the size of the filter (or kernel) Filters are the \"neurons\" of the layer and learn to detect different features in the input data.\n",
-    "- \"relu\" activation function\n",
-    "- padding = 'same' specifies the padding mode to be used in the layer. Padding is used to preserve the spatial dimensions of the input data after convolution. 'same' padding adds padding to the edges of the input data to ensure that the output of the convolutional\n",
-    "- the input data is expected to be 3-dimensional with a height of 256, a width of 256, and 3 color channels (for a color image). This is the input shape for the first layer of the model."
+    "#### Adding Convolutional Layers "
    ]
   },
   {
@@ -312,9 +314,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d9fe7ea7",
+   "metadata": {},
+   "source": [
+    "Convolutional layers are used in deep learning models to extract features from input data. \n",
+    "- 16 is the number of filters (or channels) in the layer. 3x3 is the size of the filter (or kernel) Filters are the \"neurons\" of the layer and learn to detect different features in the input data.\n",
+    "- \"relu\" activation function\n",
+    "- padding = 'same' specifies the padding mode to be used in the layer. Padding is used to preserve the spatial dimensions of the input data after convolution. 'same' padding adds padding to the edges of the input data to ensure that the output of the convolutional\n",
+    "- the input data is expected to be 3-dimensional with a height of 256, a width of 256, and 3 color channels (for a color image). This is the input shape for the first layer of the model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "b0f5a04f",
+   "execution_count": 112,
+   "id": "21993c2a",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +338,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 112,
      "metadata": {
       "image/png": {
        "width": 500
@@ -334,13 +348,13 @@
     }
    ],
    "source": [
-    "Image(filename= path +'CNN4.png',width=500)"
+    "Image(filename='CNN4.png',width=500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "c2eb26ec",
+   "execution_count": 113,
+   "id": "d4d54117",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +364,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 113,
      "metadata": {
       "image/png": {
        "width": 500
@@ -360,13 +374,13 @@
     }
    ],
    "source": [
-    "Image(filename= path +'CNN3.png',width=500)"
+    "Image(filename='CNN3.png',width=500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "9bee335f",
+   "execution_count": 115,
+   "id": "fd56737d",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +390,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 115,
      "metadata": {
       "image/png": {
        "width": 500
@@ -386,13 +400,13 @@
     }
    ],
    "source": [
-    "Image(filename= path +'CNN5.png',width=500)"
+    "Image(filename='CNN5.png',width=500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "973308bd",
+   "execution_count": 116,
+   "id": "ac5acfba",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +416,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 116,
      "metadata": {
       "image/gif": {
        "width": 500
@@ -412,7 +426,7 @@
     }
    ],
    "source": [
-    "Image(filename= path +'feature extra.gif',width=500)"
+    "Image(filename='feature extra.gif',width=500)"
    ]
   },
   {
@@ -429,8 +443,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "ae2df382",
+   "execution_count": 117,
+   "id": "25ac31b7",
    "metadata": {},
    "outputs": [
     {
@@ -440,17 +454,17 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 117,
      "metadata": {
       "image/png": {
-       "width": 600
+       "width": 500
       }
      },
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image(filename= path +'CNN7.png',width=600)"
+    "Image(filename='CNN7.png',width=500)"
    ]
   },
   {
@@ -498,8 +512,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "1699fe43",
+   "execution_count": 118,
+   "id": "62c9e0ce",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +523,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 118,
      "metadata": {
       "image/png": {
        "width": 700
@@ -519,7 +533,7 @@
     }
    ],
    "source": [
-    "Image(filename= path +'CNN8.png',width=700)"
+    "Image(filename='CNN8.png',width=700)"
    ]
   },
   {
@@ -545,8 +559,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "4387ed40",
+   "execution_count": 120,
+   "id": "fde77161",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +570,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 120,
      "metadata": {
       "image/png": {
        "width": 700
@@ -566,7 +580,7 @@
     }
    ],
    "source": [
-    "Image(filename= path +'CNN10.png',width=700)"
+    "Image(filename='CNN10.png',width=700)"
    ]
   },
   {
@@ -588,8 +602,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "090943a3",
+   "execution_count": 121,
+   "id": "5fc0ffad",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +613,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 121,
      "metadata": {
       "image/png": {
        "width": 700
@@ -609,7 +623,7 @@
     }
    ],
    "source": [
-    "Image(filename= path +'CNN9.png',width=700)"
+    "Image(filename='CNN9.png',width=700)"
    ]
   },
   {
@@ -679,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34635b11",
+   "id": "9a10399a",
    "metadata": {},
    "source": [
     "## Model Training"
@@ -766,8 +780,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "0f171c4f",
+   "execution_count": 123,
+   "id": "2f0a4668",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +791,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 123,
      "metadata": {
       "image/jpeg": {
        "width": 200
@@ -787,7 +801,7 @@
     }
    ],
    "source": [
-    "Image(filename= path +'unseen data with brain tumor.jpg',width=200)"
+    "Image(filename='unseen data with brain tumor.jpg',width=200)"
    ]
   },
   {
@@ -842,6 +856,14 @@
     "\n",
     "class_label = classes[class_index]\n",
     "print('Image with Brain tumor or not:', class_label)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb4e5c8b",
+   "metadata": {},
+   "source": [
+    "## Data Visualization"
    ]
   },
   {
