--- a/CSC547 Final Project/Final Project.ipynb
+++ b/CSC547 Final Project/Final Project.ipynb
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "18130c7f",
+   "id": "c1de4713",
    "metadata": {},
    "outputs": [
     {
@@ -490,17 +490,7 @@
    "id": "5973e980",
    "metadata": {},
    "source": [
-    "#### Final Prediction\n",
-    "\n",
-    "TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "39ef4ead",
-   "metadata": {},
-   "source": [
-    "Data Processing"
+    "## Final Prediction"
    ]
   },
   {
@@ -511,6 +501,14 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39ef4ead",
+   "metadata": {},
+   "source": [
+    "Data Processing"
    ]
   },
   {
@@ -590,11 +588,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab8d0ae2",
+   "id": "894df9da",
    "metadata": {},
    "source": [
-    "## Interpertations\n",
-    "\n"
+    "## Interpretations \n",
+    "\n",
+    "### Benefits\n",
+    " - Fairly high accuracy and low rate of false negatives means the model can be trusted to make correct choices, with less human correction required.\n",
+    " - Rather quick performance due to usage of max-pooling layers to reduce sample space.\n",
+    " - Can help save time with classifying images, freeing up the examiner to work on other tasks as they only need to check to make sure it isn't wrong.\n",
+    "\n",
+    "### Limitations\n",
+    " - Small number of samples means it's harder to get a good apprasial of the model that would be suitable for the rigorous standards of the medical field.\n",
+    " - Data pre-processing could be improved.\n",
+    "   - We don't constrain the image to just the brain (see above).\n",
+    "   - Lots of dark padding around the image.\n",
+    "   - Words are still present in the data, which could be affecting results."
    ]
   },
   {
@@ -696,7 +705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dc2f001",
+   "id": "508c6576",
    "metadata": {},
    "source": [
     "References\n",
