--- a/CSC547 class/Word Embeddings.ipynb
+++ b/CSC547 class/Word Embeddings.ipynb
@@ -270,10 +270,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "CRTsDyj5UP8T"
    },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'wget' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n",
+      "'unzip' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget http://nlp.stanford.edu/data/glove.6B.zip\n",
+    "!unzip -q glove.6B.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
