--- a/HW/Assignment.ipynb
+++ b/HW/Assignment.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "94952a80",
+   "metadata": {},
+   "source": [
+    "For assignment 3, describe the decoder section of the Transformer architecture. Include description of different layers - output embedding, Masked multi-head attention layer, Multi-head attention layer, Normalization layer, Feed forward network, and Residual connections. Also, answer this question - How is the output of the encoder used in the decoder. Submit a word or pdf file with your answers.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8eed4c6b",
    "metadata": {},
    "source": [
@@ -10,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "30fe2523",
    "metadata": {},
    "outputs": [],
@@ -20,16 +28,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "73ce1713",
-   "metadata": {},
-   "source": [
-    "The Transformer Decoder is responsible for generating the output sequence step by step, taking into account the encoded input sequence from the Transformer Encoder and its previously generated tokens"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "9edbce1a",
    "metadata": {},
    "outputs": [
@@ -40,44 +40,93 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {
       "image/jpeg": {
-       "width": 400
+       "width": 300
       }
      },
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image(filename='Transformer.jpg',width=400)"
+    "Image(filename='Transformer.jpg',width=300)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1ee7987c",
+   "id": "73ce1713",
    "metadata": {},
    "source": [
-    "#### Two key components:\n",
-    "- Multi-head Self-Attention: This mechanism allows the model to weigh the importance of different tokens in the previously generated output sequence to generate the next token.\n",
-    "- Multi-head Cross-Attention: This mechanism allows the model to weigh the importance of different tokens in the encoded input sequence, enabling the decoder to focus on relevant parts of the input when generating the next token."
+    "The Transformer Decoder is an important part of Transformer model, since the model did not use RNN, this method is mainly use to solving sequence to sequence tasks."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b1a58bd8",
+   "id": "4e128b80",
    "metadata": {},
    "source": [
-    "Key differenct between Encoder and Decoder layers are the Multi-head Cross-Attention mechanism\n",
-    "- which allows the Decoder to focus on relevant parts of the encoded input sequence while generating the next token in the output sequence."
+    "### Decoder section of the Transformer architecture"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "efd57cbc",
+   "id": "e88592f7",
    "metadata": {},
    "source": [
-    "Masked Multi-head Attention is a variation of the Multi-head Self-Attention mechanism used specifically in the Transformer Decoder. The purpose of the \"masking\" is to prevent the Decoder from attending to future tokens in the output sequence that it is trying to generate, thus ensuring that the model generates the output tokens in the correct order."
+    "- Output Embedding \n",
+    "- positional Encoding \n",
+    "- Masked Multi-Head Attention layer\n",
+    "- Multi-Head Attention layer\n",
+    "- Normlization \n",
+    "- Feed foward layer\n",
+    "- Final output prediction with SoftMax activation function\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a1ba595",
+   "metadata": {},
+   "source": [
+    " ##### Output Embedding and positional Encoding\n",
+    "  same function as we described in class, converting tokens into continuous vector representation since Transformer is not using RNN model, it need to have its own way to remember the sequence of the word"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b9e8878",
+   "metadata": {},
+   "source": [
+    "##### Masked Multi-Head Attention layer\n",
+    "- a variation of the Multi-head Self-Attention mechanism used specifically in the Transformer Decoder. The purpose of the \"masking\" is to prevent the Decoder from attending to future tokens in the output sequence that it is trying to generate, thus ensuring that the model generates the output tokens in the correct order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9a3ee8c",
+   "metadata": {},
+   "source": [
+    "##### Multi-Head Attention layer\n",
+    "Same as the MHA we talk about in class, but here are some differences.\n",
+    "- we all know that MHA are using Q(Query),K(Key),V(Value) to calculate the weight sum. However, as we can see in the image above, the layer are using the Key and values from the encoding section and Query from the first layer of decoding section."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dded2b3",
+   "metadata": {},
+   "source": [
+    "##### Normlization  and Feed foward layer\n",
+    "- same as the encoding section use to normalize the paramaters and transform the input data by applying non-linear transformations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc4eb2c0",
+   "metadata": {},
+   "source": [
+    "##### Final output prediction with SoftMax activation function\n",
+    "-  linear layer and the final softmax layer work together to generate the output sequence, typically a probability distribution over the target vocabulary for each token in the sequence."
    ]
   },
   {
@@ -85,13 +134,21 @@
    "id": "05a89dcd",
    "metadata": {},
    "source": [
-    "Multi-head Cross-Attention is used in the Decoder to attend to the encoded input sequence, while Masked Multi-head Attention is a variation of the Multi-head Self-Attention mechanism used in the Decoder to prevent it from attending to future tokens in the output sequence."
+    "## How is the output of the encoder used in the decoder."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f050a375",
+   "metadata": {},
+   "source": [
+    "As we described in above, the key and values from the encoder section are being used in the decoder section and bring the query from first layer of decoder section use to for final calculation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb366253",
+   "id": "9a9e8571",
    "metadata": {},
    "outputs": [],
    "source": []
